@@ -9,6 +9,7 @@ Change Log:
 - Add compatiblity for new  Stripe Gateway API (update from 2015-02-18)
 - Fix error when paying with the Authorize.net payment gateway
 - Fix an issue where a static blog-page would not display any posts
+- Fix an issue with the protection shortcode so it works for users with multiple memberships
 
 1.1.1.1
 ----------------------------------------------------------------------
